greenfield: remove old Connector/Destination/Sink/Iceberg/HTTP/examples
Clear deck for the v0.2 reshape. The new core (Connector with Emission ADT,
DataSink as ZSink, watermark-gated state commits, Source/FedBy parent-child)
shares no surface with the old Connector[S, R, E <: Throwable] + ExloState
env-service shape, so the cleanest path is a clean room.

Deleted:
- exlo/runtime/iceberg/* — Iceberg dropped from the framework. State will live
  in a tiny S3-backed KV; data lives in pluggable DataSinks.
- exlo/runtime/{ExloState, Destination, Sink, SinkConfig, LoggingDestination,
  DestinationFactory}.scala — replaced by DataSink/StateStore/WatermarkTracker
  + Runner.
- exlo/domain/{Connector, ConnectorAspect, SlicedConnector, RecoveryAction}.scala
  — Connector trait will be rewritten with Emission ADT, reduce, codec, and
  pure ZStream output (no env-service plumbing).
- exlo/http/* — bring back in a follow-up PR against the new Connector shape.
- examples/ subproject — rebuild later.
- ExloError.SnapshotExpired — Iceberg-specific.

build.sbt:
- Drop iceberg-{core,parquet,nessie,aws}, nessie-client, parquet-avro,
  hadoop-{common,mapreduce-client-core}.
- Drop aws {glue,dynamodb,kms} (Iceberg catalog only). Keep s3, sts, sso,
  ssooidc for the default AWS credential provider chain.
- Drop examples subproject; aggregate is now exlo only.
- Drop -Djava.security.manager=allow (Hadoop-only workaround).

Surviving:
- RunContext, Telemetry, StreamRegistry — substrate, no coupling to old shape.
- ExloError (trimmed) — sealed-trait error model preserved.
- Their two specs.

Compile + 8 surviving tests green.